styles is added to project

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <html>
-    <a href="index.html">Главная страница</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
+    <a href="index.html" class="menulink">Главная страница</a>
+    <a href="catalog/catalog.html" class="menulink">Каталог</a>
+    <a href="contacts.html" class="menulink">Контакты</a>
     <img src="./img/foto.jpeg">
-    <h1>Главная страница</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum numquam officia, quos reiciendis quis tempora asperiores quasi quod voluptatibus suscipit, corrupti tenetur eaque omnis voluptate accusamus placeat eum voluptas minima?</p>
-    <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus eum voluptas temporibus, enim odit tenetur sapiente non autem sit? Ipsum perferendis expedita quos culpa vero unde doloribus reiciendis ex est.</p>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa dicta possimus facere excepturi? Ad voluptate quidem delectus sed, quia harum qui nisi alias dolores quasi doloremque earum nam est cumque!</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iure quo hic quod nisi maiores molestias impedit reiciendis vero, voluptatibus enim eum doloribus error quibusdam non nostrum facere consequuntur. Fugit?</p>
+    <h1 class="header">Главная страница</h1>
+    <p class="longtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum numquam officia, quos reiciendis quis tempora asperiores quasi quod voluptatibus suscipit, corrupti tenetur eaque omnis voluptate accusamus placeat eum voluptas minima?</p>
+    <h2 class="subheader">Добро пожаловать на сайт</h2>
+    <p class="longtext">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloribus eum voluptas temporibus, enim odit tenetur sapiente non autem sit? Ipsum perferendis expedita quos culpa vero unde doloribus reiciendis ex est.</p>
+    <p class="longtext">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa dicta possimus facere excepturi? Ad voluptate quidem delectus sed, quia harum qui nisi alias dolores quasi doloremque earum nam est cumque!</p>
+    <p class="longtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias iure quo hic quod nisi maiores molestias impedit reiciendis vero, voluptatibus enim eum doloribus error quibusdam non nostrum facere consequuntur. Fugit?</p>
 </body>
 </html>
