--- a/contacts.html
+++ b/contacts.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <a href="index.html">Главная страница</a>
-    <a href="catalog/catalog.html">Каталог</a>
-    <a href="contacts.html">Контакты</a>
-    <h1>Контакты для заказа</h1>
-    <p>Зля заказа обращвться по номеру телефона: 8345030485</p>
+    <a href="index.html" class="menulink">Главная страница</a>
+    <a href="catalog/catalog.html" class="menulink">Каталог</a>
+    <a href="contacts.html" class="menulink">Контакты</a>
+    <h1 class="header">Контакты для заказа</h1>
+    <p class="longtext">Для заказа обращвться по номеру телефона: 8345030485</p>
 </body>
 </html>
